# jumpfall-SDK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MENU-EDITOR.md  README.md  README_WORKSHOP.md  SECURITY.md  jumpfall_menu_editor.py  jumpfall_sdk.py  pyproject.toml
.github/workflows/: ci.yml
schema/: jumpfall.mod.schema.json  level-editor.schema.json
templates/content-mod/: jumpfall.mod.json
templates/content-mod/content/level-editor/: pieces.json
templates/content-mod/content/localization/: english.json  spanish-latam.json
templates/content-mod/content/menus/: main-menu.json
templates/content-mod/content/patches/: main-menu.json
tests/: test_sdk.py
wiki/: Architecture-and-Source-Map.md  Capabilities-and-Content.md  Compatibility-and-Testing.md  Creating-a-Mod.md  Custom-Level-Editor-Pieces.md  Examples.md  Extending-JumpFall.md  Getting-Started.md  Home.md  Manifest-1.0.md  Map-Format-Reference.md  Maps-and-Level-Editor.md  Menus-and-Scene-Patches.md  Security-and-Limits.md  Skins-JVSK.md  Total-Conversions.md  Troubleshooting.md  Visual-Menu-Editor.md  Workshop-Packages-JSM.md  _Footer.md  _Sidebar.md
